--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
 /* Reset and base styles  */
 * {
   padding: 0px;
@@ -12,10 +13,15 @@
 }
 
 /* Links */
-a, a:visited, a:hover {
+a, a:visited {
   color: inherit;
   text-decoration: none;
   display: inline-block;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
 }
 
 a:focus,
@@ -53,7 +59,7 @@ input::-ms-clear {
   display: none;
 }
 
-button, input[type="submit"] {
+button, input[type=submit] {
   display: inline-block;
   box-shadow: none;
   background-color: transparent;
@@ -80,23 +86,16 @@ legend {
 }
 
 html {
-  min-height: 100vh;
-  /* sticky footer */
+  min-height: 100vh; /* sticky footer */
   scroll-behavior: smooth;
 }
 
 body {
-  min-height: 100vh;
-  /* sticky footer */
-  display: -webkit-box;
-  display: flex;
-  /* sticky footer */
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  /* sticky footer */
-  font-family: 'Open Sans', sans-serif;
-  color: #323232;
+  min-height: 100vh; /* sticky footer */
+  display: flex; /* sticky footer */
+  flex-direction: column; /* sticky footer */
+  font-family: "Montserrat", sans-serif;
+  color: #000;
   font-size: 16px;
   line-height: 1.6875;
   text-rendering: optimizeSpeed;
@@ -107,8 +106,7 @@ body {
 }
 
 body > * {
-  flex-shrink: 0;
-  /* sticky footer */
+  flex-shrink: 0; /* sticky footer */
 }
 
 /* Grid styles */
@@ -163,12 +161,75 @@ body > * {
 
 /* Sticky Footer */
 .footer {
-  margin-top: auto;
-  /* sticky footer */
+  margin-top: auto; /* sticky footer */
   /* Just for fun */
   text-align: center;
   background-color: #e2e2e2;
   padding: 50px 0;
 }
 
-/*# sourceMappingURL=main.css.map */
+.nav ul {
+  display: flex;
+  justify-content: space-between;
+  -moz-column-gap: 100px;
+       column-gap: 100px;
+}
+
+.title {
+  font-size: 78px;
+  font-weight: 700;
+  line-height: 1; /* 78px */
+}
+
+.button {
+  padding: 19px 40px;
+  border-radius: 50px;
+  background-color: #eff7fc;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.3; /* 26px */
+  transition: background-color 0.2s ease-in;
+}
+.button:hover {
+  background: #fbdc4d;
+}
+
+.link {
+  position: relative;
+  font-size: 22px;
+  line-height: 1.3; /* 28.6px */
+  color: #1a71d2;
+}
+.link::after {
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  height: 1px;
+  background-color: #1a71d2;
+  transition: all 0.2s ease-in;
+}
+.link:hover {
+  width: 100%;
+}
+
+.socials {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+}
+
+.header-top__nav {
+  margin-top: 63px;
+  margin-bottom: 62px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-top__social {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 26px;
+       column-gap: 26px;
+}/*# sourceMappingURL=main.css.map */
