--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,7 +8,7 @@ body {
 	display: flex; /* sticky footer */
 	flex-direction: column; /* sticky footer */
 
-	font-family: 'Open Sans', sans-serif;
+	font-family:  "Montserrat", sans-serif;
     color: $black-color;
     font-size: 16px;
     line-height: 1.6875;
