--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,19 @@ body > * {
        column-gap: 100px;
 }
 
+.nav li {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.3; /* 26px */
+}
+
+.nav a {
+  transition: color 0.2s ease-in;
+}
+.nav a:hover {
+  color: #fbdc4d;
+}
+
 .title {
   font-size: 78px;
   font-weight: 700;
@@ -224,6 +237,7 @@ body > * {
   margin-top: 63px;
   margin-bottom: 62px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
