--- a/sass/base/_vars.scss
+++ b/sass/base/_vars.scss
@@ -1,4 +1,4 @@
-$accent-color: #f78434;
-$accent-color-hover: #ff6a00;
+$accent-color: #fbdc4d;
+// $accent-color-hover: #ff6a00;
 $black-color: #000;
 $link-color: #1a71d2;
