--- a/sass/blocks/_nav.scss
+++ b/sass/blocks/_nav.scss
@@ -3,3 +3,17 @@
     justify-content: space-between;
     column-gap: 100px
 }
+
+.nav li {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.3; /* 26px */
+}
+
+.nav a {
+    transition: color 0.2s ease-in;
+
+    &:hover {
+        color: $accent-color;
+    }
+}
