--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -5,6 +5,7 @@
     margin-top: 63px;
     margin-bottom: 62px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
