--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@ a, a:visited {
 }
 
 a:hover {
-  color: inherit;
   text-decoration: none;
 }
 
@@ -97,7 +96,7 @@ body {
   font-family: "Montserrat", sans-serif;
   color: #000;
   font-size: 16px;
-  line-height: 1.6875;
+  line-height: 1.3;
   text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
   -ms-text-size-adjust: 100%;
@@ -178,14 +177,25 @@ body > * {
 .nav li {
   font-size: 20px;
   font-weight: 600;
-  line-height: 1.3; /* 26px */
 }
 
 .nav a {
+  position: relative;
   transition: color 0.2s ease-in;
 }
-.nav a:hover {
-  color: #fbdc4d;
+.nav a::after {
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  content: "";
+  height: 2px;
+  width: 0;
+  background-color: #fbdc4d;
+  transition: bottom 0.2s ease-in;
+}
+.nav a:hover::after {
+  width: 100%;
+  bottom: -5px;
 }
 
 .title {
@@ -200,7 +210,6 @@ body > * {
   background-color: #eff7fc;
   font-size: 20px;
   font-weight: 700;
-  line-height: 1.3; /* 26px */
   transition: background-color 0.2s ease-in;
 }
 .button:hover {
@@ -210,18 +219,19 @@ body > * {
 .link {
   position: relative;
   font-size: 22px;
-  line-height: 1.3; /* 28.6px */
   color: #1a71d2;
 }
 .link::after {
+  content: "";
   position: absolute;
   left: 0;
-  bottom: -5px;
+  bottom: -8px;
   height: 1px;
   background-color: #1a71d2;
-  transition: all 0.2s ease-in;
+  transition: bottom 0.2s ease-in;
 }
-.link:hover {
+.link:hover::after {
+  bottom: -3px;
   width: 100%;
 }
 
@@ -231,6 +241,10 @@ body > * {
   justify-content: space-between;
   -moz-column-gap: 30px;
        column-gap: 30px;
+  transition: filter 0.2s ease-in;
+}
+.socials a:hover {
+  filter: contrast(200%);
 }
 
 .header-top__nav {
@@ -246,4 +260,73 @@ body > * {
   align-items: center;
   -moz-column-gap: 26px;
        column-gap: 26px;
+}
+
+.header {
+  padding-top: 20px;
+  padding-bottom: 90px;
+}
+
+.header__row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__text {
+  max-width: 542px;
+}
+
+.header__title {
+  margin-bottom: 30px;
+}
+
+.header__desc {
+  margin-bottom: 30px;
+  max-width: 542px;
+}
+.header__desc p {
+  font-family: Montserrat;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.6; /* 35.2px */
+  color: #000;
+}
+.header__desc p + p {
+  margin-top: 15px;
+}
+
+.header__buttons {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+
+.header__img {
+  z-index: 1;
+  position: relative;
+  width: 475px;
+  box-shadow: 40px 40px rgba(255, 255, 255, 0.5);
+}
+
+.header__banner {
+  position: relative;
+  z-index: 0;
+  margin-top: -156px;
+}
+
+.header__subtitle {
+  margin-bottom: 30px;
+  font-size: 42px;
+  font-weight: 700;
+}
+
+.header__skills {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.header__socials {
+  margin-bottom: 20px;
 }/*# sourceMappingURL=main.css.map */
