--- a/sass/blocks/_link.scss
+++ b/sass/blocks/_link.scss
@@ -1,19 +1,20 @@
 .link {
     position: relative;
     font-size: 22px;
-    line-height: 1.3; /* 28.6px */
     color: $link-color;
 
     &::after {
+        content: "";
         position: absolute;
         left: 0;
-        bottom: -5px;
+        bottom: -8px;
         height: 1px;
         background-color: $link-color;
-        transition: all 0.2s ease-in;
+        transition: bottom 0.2s ease-in;
     }
 
-    &:hover {
+    &:hover::after {
+        bottom: -3px;
         width: 100%;
     }
 }
