--- a/sass/blocks/_nav.scss
+++ b/sass/blocks/_nav.scss
@@ -7,13 +7,26 @@
 .nav li {
     font-size: 20px;
     font-weight: 600;
-    line-height: 1.3; /* 26px */
 }
 
 .nav a {
+    position: relative;
     transition: color 0.2s ease-in;
 
-    &:hover {
-        color: $accent-color;
+    &::after {
+        position: absolute;
+        left: 0;
+        bottom: -10px;
+
+        content: "";
+        height: 2px;
+        width: 0;
+        background-color: $accent-color;
+        transition: bottom 0.2s ease-in;
+    }
+
+    &:hover::after {
+        width: 100%;
+        bottom: -5px;
     }
 }
