--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,5 +14,6 @@
 @import "./blocks/socials";
 
 // Sections
+@import "./sections/header-top";
 @import "./sections/header";
 @import "./sections/footer";
