--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -1,16 +1,71 @@
-.header-top {
+.header {
+    padding-top: 20px;
+    padding-bottom: 90px;
 }
 
-.header-top__nav {
-    margin-top: 63px;
-    margin-bottom: 62px;
+.header__row {
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
-.header-top__social {
+.header__text {
+    max-width: 542px;
+}
+
+.header__title {
+    margin-bottom: 30px;
+}
+
+.header__desc {
+    margin-bottom: 30px;
+    max-width: 542px;
+    p {
+        font-family: Montserrat;
+        font-size: 22px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.6; /* 35.2px */
+        color: #000;
+    }
+
+    p + p {
+        margin-top: 15px;
+    }
+}
+
+.header__buttons {
     display: flex;
-    align-items: center;
-    column-gap: 26px;
+    column-gap: 20px;
+}
+
+.header__img {
+    z-index: 1;
+    position: relative;
+    width: 475px;
+    box-shadow: 40px 40px rgba(255, 255, 255, 0.5);
+}
+
+.header__banner {
+    position: relative;
+    z-index: 0;
+    margin-top: -156px;
+}
+
+.header__about {
+}
+
+.header__subtitle {
+    margin-bottom: 30px;
+    font-size: 42px;
+    font-weight: 700;
+}
+
+.header__skills {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.header__socials {
+    margin-bottom: 20px;
 }
