--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,14 @@ body > * {
   }
 }
 
+.grad-border {
+  display: inline;
+  background-repeat: no-repeat;
+  background-position: center bottom 13px;
+  background-size: 100% 12px;
+  background-image: linear-gradient(to right, #fbdc4d, #fbdc4d);
+}
+
 /* Utility */
 .none {
   display: none !important;
@@ -170,6 +178,7 @@ body > * {
 .nav ul {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   -moz-column-gap: 100px;
        column-gap: 100px;
 }
@@ -269,10 +278,12 @@ body > * {
 
 .header__row {
   display: flex;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
 .header__text {
+  padding-top: 19px;
   max-width: 542px;
 }
 
@@ -305,14 +316,35 @@ body > * {
 .header__img {
   z-index: 1;
   position: relative;
-  width: 475px;
   box-shadow: 40px 40px rgba(255, 255, 255, 0.5);
+}
+.header__img img {
+  width: 475px;
+  height: 410px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .header__banner {
-  position: relative;
-  z-index: 0;
   margin-top: -156px;
+}
+.header__banner img {
+  margin: 0 auto;
+}
+
+.header__columns {
+  display: flex;
+  justify-content: flex-start;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+}
+
+.header__column:first-child {
+  width: 635px;
+}
+
+.header__about {
+  margin-top: -32px;
 }
 
 .header__subtitle {
@@ -325,6 +357,9 @@ body > * {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
+}
+.header__skills li {
+  font-size: 22px;
 }
 
 .header__socials {
