--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -5,10 +5,12 @@
 
 .header__row {
     display: flex;
+    align-items: flex-start;
     justify-content: space-between;
 }
 
 .header__text {
+    padding-top: 19px;
     max-width: 542px;
 }
 
@@ -41,17 +43,35 @@
 .header__img {
     z-index: 1;
     position: relative;
-    width: 475px;
     box-shadow: 40px 40px rgba(255, 255, 255, 0.5);
+
+    img {
+        width: 475px;
+        height: 410px;
+        object-fit: cover;
+    }
 }
 
 .header__banner {
-    position: relative;
-    z-index: 0;
     margin-top: -156px;
+
+    img {
+        margin: 0 auto;
+    }
+}
+
+.header__columns {
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 30px;
+}
+
+.header__column:first-child {
+    width: 635px;
 }
 
 .header__about {
+    margin-top: -32px;
 }
 
 .header__subtitle {
@@ -64,6 +84,10 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+
+    li {
+        font-size: 22px;
+    }
 }
 
 .header__socials {
