CSS svg style base

--- a/css/main.css
+++ b/css/main.css
@@ -150,29 +150,29 @@ body > * {
   background-image: linear-gradient(to right, #fbdc4d, #fbdc4d);
 }
 
-.linkedin-svg {
+#svg-ln {
   width: 32px;
   height: 32px;
 }
-.linkedin-svg g {
+#svg-ln g {
   fill: black;
 }
 
-.git-svg {
+#svg-git {
   width: 42px;
   height: 42px;
 }
-.git-svg g {
+#svg-git g {
   fill: #212121;
 }
 
-.linkedin-svg, .git-svg {
+#svg-ln, #svg-git {
   fill: none;
 }
-.linkedin-svg g, .git-svg g {
+#svg-ln g, #svg-git g {
   transition: fill 0.2s ease-in;
 }
-.linkedin-svg:hover g, .git-svg:hover g {
+#svg-ln:hover g, #svg-git:hover g {
   fill: #fbdc4d;
 }
 
