--- a/sass/blocks/_button.scss
+++ b/sass/blocks/_button.scss
@@ -1,7 +1,9 @@
 .button {
-    padding: 19px 40px;
+    padding: 0 40px;
+    height: 64px;
     border-radius: 50px;
     background-color: #eff7fc;
+    line-height: 64px;
     font-size: 20px;
     font-weight: 700;
 
