--- a/css/main.css
+++ b/css/main.css
@@ -97,11 +97,6 @@ body {
   color: #000;
   font-size: 16px;
   line-height: 1.3;
-  text-rendering: optimizeSpeed;
-  -webkit-font-smoothing: antialiased;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
 }
 
 body > * {
@@ -205,6 +200,70 @@ body > * {
   line-height: 1;
 }
 
+.subtitle {
+  font-size: 54px;
+  font-weight: 700;
+}
+
+.subtitle-42px {
+  font-size: 42px;
+  font-weight: 700;
+}
+
+.header-intro {
+  z-index: 1;
+  position: relative;
+}
+
+.header-intro__content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.header-intro__text {
+  padding-top: 19px;
+  max-width: 542px;
+}
+
+.header-intro__title {
+  margin-bottom: 30px;
+}
+
+.header-intro__desc {
+  margin-bottom: 30px;
+  max-width: 542px;
+}
+.header-intro__desc p {
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.6; /* 35.2px */
+  color: #000;
+}
+.header-intro__desc p + p {
+  margin-top: 15px;
+}
+
+.header-intro__buttons {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+.header-intro__buttons > * {
+  flex-grow: 0;
+}
+
+.header-intro__img {
+  box-shadow: 40px 40px rgba(255, 255, 255, 0.5);
+}
+.header-intro__img img {
+  width: 475px;
+  height: 410px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .button {
   padding: 0 40px;
   height: 64px;
@@ -217,6 +276,18 @@ body > * {
 }
 .button:hover {
   background: #fbdc4d;
+}
+
+.header-banner__img {
+  z-index: 0;
+  position: relative;
+  margin-top: -156px;
+}
+.header-banner__img img {
+  margin: 0 auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 759px;
 }
 
 .link {
@@ -250,6 +321,33 @@ body > * {
   filter: contrast(200%);
 }
 
+.header-about__content {
+  margin-top: -31px;
+  display: flex;
+}
+
+.header-about__column:first-child {
+  width: 635px;
+}
+.header-about__column:last-child {
+  margin-left: 30px;
+}
+
+.header-about__subtitle {
+  margin-bottom: 30px;
+}
+
+.header-about__skills li {
+  font-size: 22px;
+}
+.header-about__skills li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.header-about__socials {
+  margin-bottom: 15px;
+}
+
 .header-top__nav {
   margin-top: 63px;
   margin-bottom: 62px;
@@ -268,103 +366,4 @@ body > * {
 .header {
   padding-top: 20px;
   padding-bottom: 90px;
-}
-
-.header__row {
-  z-index: 1;
-  position: relative;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-
-.header__text {
-  padding-top: 19px;
-  max-width: 542px;
-}
-
-.header__title {
-  margin-bottom: 30px;
-}
-
-.header__desc {
-  margin-bottom: 30px;
-  max-width: 542px;
-}
-.header__desc p {
-  font-family: Montserrat;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.6; /* 35.2px */
-  color: #000;
-}
-.header__desc p + p {
-  margin-top: 15px;
-}
-
-.header__buttons {
-  display: flex;
-  -moz-column-gap: 20px;
-       column-gap: 20px;
-}
-.header__buttons > * {
-  flex-grow: 0;
-}
-
-.header__img {
-  box-shadow: 40px 40px rgba(255, 255, 255, 0.5);
-}
-.header__img img {
-  width: 475px;
-  height: 410px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: 10% 50%;
-     object-position: 10% 50%;
-}
-
-.header__banner {
-  z-index: 0;
-  position: relative;
-  margin-top: -156px;
-}
-.header__banner img {
-  margin-left: auto;
-  margin-right: auto;
-  height: 759px;
-}
-
-.header__columns {
-  display: flex;
-  justify-content: flex-start;
-  -moz-column-gap: 30px;
-       column-gap: 30px;
-}
-
-.header__column:first-child {
-  width: 635px;
-}
-
-.header__about {
-  margin-top: -32px;
-}
-
-.header__subtitle {
-  margin-bottom: 30px;
-  font-size: 42px;
-  font-weight: 700;
-}
-
-.header__skills {
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
-}
-.header__skills li {
-  font-size: 22px;
-}
-
-.header__socials {
-  margin-bottom: 15px;
 }/*# sourceMappingURL=main.css.map */
