--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,9 +9,13 @@
 // Blocks
 @import "./blocks/nav";
 @import "./blocks/title";
+@import "./blocks/subtitle";
+@import "./blocks/header-intro";
 @import "./blocks/button";
+@import "./blocks/header-banner";
 @import "./blocks/link";
 @import "./blocks/socials";
+@import "./blocks/header-about";
 
 // Sections
 @import "./sections/header-top";
