--- a/css/main.css
+++ b/css/main.css
@@ -148,11 +148,20 @@ body > * {
 .svg-ln {
   width: 32px;
   height: 32px;
+  fill: #000;
 }
 
 .svg-git {
   width: 42px;
   height: 42px;
+  fill: #212121;
+}
+
+.svg-ln, .svg-git {
+  transition: fill 0.2s ease-in;
+}
+.svg-ln:hover, .svg-git:hover {
+  fill: #fbdc4d;
 }
 
 .svg-tg, .svg-vk, .svg-fb, .svg-inst, .svg-wa {
