HTML section .portfolio base data

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,4 +20,5 @@
 // Sections
 @import "./sections/header-top";
 @import "./sections/header";
+@import "./sections/portfolio";
 @import "./sections/footer";
