--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -86,9 +86,9 @@ body > * {
 }
 
 /* Utility */
-// .none {
-// 	display: none !important;
-// }
+.none {
+	display: none !important;
+}
 
 // .visually-hidden {
 //     opacity: 0;
