--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "./blocks/link";
 @import "./blocks/socials";
 @import "./blocks/header-about";
+@import "./blocks/portfolio-card";
 
 // Sections
 @import "./sections/header-top";
