--- a/css/main.css
+++ b/css/main.css
@@ -371,16 +371,30 @@ body > * {
 }
 
 .portfolio-card {
+  position: relative;
+  top: 0;
   max-width: 350px;
   height: 296px;
+  transition: opacity 0.2s ease-in;
+}
+.portfolio-card:hover {
+  opacity: 0.9;
+}
+.portfolio-card:hover img {
+  overflow: hidden;
+  border: 1px solid #fbdc4d;
+  border-top: -2px;
+  transform: scale(1.2);
 }
 
 .portfolio-card__img {
   margin-bottom: 16px;
+  overflow: hidden;
 }
 .portfolio-card__img img {
   width: 350px;
   height: 220px;
+  transition: transform 0.4s ease-in;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -441,4 +455,8 @@ body > * {
 
 .portfolio__cards {
   display: flex;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  row-gap: 50px;
+  flex-wrap: wrap;
 }/*# sourceMappingURL=main.css.map */
