--- a/css/main.css
+++ b/css/main.css
@@ -375,10 +375,10 @@ body > * {
   top: 0;
   max-width: 350px;
   height: 296px;
-  transition: opacity 0.2s ease-in;
+  transition: filter 0.2s ease-in;
 }
 .portfolio-card:hover {
-  opacity: 0.9;
+  filter: contrast(1.1) saturate(1.2);
 }
 .portfolio-card:hover img {
   overflow: hidden;
@@ -433,7 +433,7 @@ body > * {
 }
 
 .portfolio-card__title {
-  margin-bottom: 6px;
+  margin-bottom: 7px;
   font-size: 24px;
   font-weight: 600;
 }
