--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,4 +22,5 @@
 @import "./sections/header-top";
 @import "./sections/header";
 @import "./sections/portfolio";
+@import "./sections/timeline";
 @import "./sections/footer";
