--- a/css/main.css
+++ b/css/main.css
@@ -507,6 +507,17 @@ h2.grad-border {
 .timeline-item {
   padding-bottom: 60px;
   width: 50%;
+  position: relative;
+}
+.timeline-item::before, .timeline-item::after {
+  content: "";
+  position: absolute;
+}
+.timeline-item::before {
+  width: 4px;
+  top: 0;
+  bottom: 0;
+  background-color: blue;
 }
 
 /* Нечетные */
@@ -515,8 +526,16 @@ h2.grad-border {
   text-align: right;
 }
 
+.timeline-item:nth-child(odd)::before {
+  right: -2px;
+}
+
 /* Четные */
 .timeline-item:nth-child(even) {
   margin-left: auto;
   padding-left: 56px;
+}
+
+.timeline-item:nth-child(even)::before {
+  left: -2px;
 }/*# sourceMappingURL=main.css.map */
