--- a/css/main.css
+++ b/css/main.css
@@ -517,7 +517,19 @@ h2.grad-border {
   width: 4px;
   top: 0;
   bottom: 0;
-  background-color: blue;
+  background-color: #e1eef4;
+}
+.timeline-item::after {
+  top: 0;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  border: 4px solid #e1eef4;
+  background-color: #fff;
+}
+
+.timeline-item:last-child::before {
+  display: none;
 }
 
 /* Нечетные */
@@ -530,6 +542,10 @@ h2.grad-border {
   right: -2px;
 }
 
+.timeline-item:nth-child(odd)::after {
+  right: -17px;
+}
+
 /* Четные */
 .timeline-item:nth-child(even) {
   margin-left: auto;
@@ -538,4 +554,8 @@ h2.grad-border {
 
 .timeline-item:nth-child(even)::before {
   left: -2px;
+}
+
+.timeline-item:nth-child(even)::after {
+  left: -17px;
 }/*# sourceMappingURL=main.css.map */
