HTML/CSS  teg name , .timeline-item correction

--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,11 @@ h2.grad-border {
   background-position: center bottom 10px;
 }
 
+.timeline-item__title.grad-border {
+  background-size: 100% 6px;
+  background-position: center bottom 4px;
+}
+
 .svg-ln {
   width: 32px;
   height: 32px;
@@ -219,12 +224,12 @@ h2.grad-border {
   line-height: 1;
 }
 
-.subtitle {
+.section-title {
   font-size: 54px;
   font-weight: 700;
 }
 
-.subtitle-42px {
+.section-title-42px {
   font-size: 42px;
   font-weight: 700;
 }
@@ -297,12 +302,12 @@ h2.grad-border {
   background: #fbdc4d;
 }
 
-.header-banner__img {
+.header-banner {
   z-index: 0;
   position: relative;
   margin-top: -156px;
 }
-.header-banner__img img {
+.header-banner img {
   margin: 0 auto;
   -o-object-fit: cover;
      object-fit: cover;
@@ -447,9 +452,91 @@ h2.grad-border {
   font-size: 18px;
 }
 
+.timeline-wrapper {
+  width: 890px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.timeline-item__title {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.timeline-item {
+  padding-bottom: 60px;
+  width: 50%;
+  position: relative;
+}
+.timeline-item::before, .timeline-item::after {
+  content: "";
+  position: absolute;
+}
+.timeline-item::before {
+  width: 4px;
+  top: 0;
+  bottom: 0;
+  background-color: #e1eef4;
+}
+.timeline-item::after {
+  top: 0;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  border: 4px solid #e1eef4;
+  background-color: #fff;
+}
+.timeline-item p {
+  font-size: 16px;
+  line-height: 1.4; /* 22.4px */
+  margin-top: 8px;
+}
+.timeline-item p:not(:last-child) {
+  margin-bottom: 8px;
+}
+.timeline-item p + * {
+  margin-top: 0;
+}
+
+.timeline-item:last-child::before {
+  display: none;
+}
+
+/* Нечетные */
+.timeline-item:nth-child(odd) {
+  padding-right: 51px;
+  text-align: right;
+}
+
+.timeline-item:nth-child(odd)::before {
+  right: 0;
+  transform: translateX(50%);
+}
+
+.timeline-item:nth-child(odd)::after {
+  right: 0;
+  transform: translateX(50%);
+}
+
+/* Четные */
+.timeline-item:nth-child(even) {
+  margin-left: auto;
+  padding-left: 51px;
+}
+
+.timeline-item:nth-child(even)::before {
+  left: 0;
+  transform: translateX(-50%);
+}
+
+.timeline-item:nth-child(even)::after {
+  left: 0;
+  transform: translateX(-50%);
+}
+
 .header-top__nav {
-  margin-top: 63px;
-  margin-bottom: 62px;
+  padding-top: 63px;
+  padding-bottom: 62px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -496,66 +583,4 @@ h2.grad-border {
 .timeline__header {
   margin-bottom: 70px;
   text-align: center;
-}
-
-.timeline-wrapper {
-  width: 850px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.timeline-item {
-  padding-bottom: 60px;
-  width: 50%;
-  position: relative;
-}
-.timeline-item::before, .timeline-item::after {
-  content: "";
-  position: absolute;
-}
-.timeline-item::before {
-  width: 4px;
-  top: 0;
-  bottom: 0;
-  background-color: #e1eef4;
-}
-.timeline-item::after {
-  top: 0;
-  width: 34px;
-  height: 34px;
-  border-radius: 50%;
-  border: 4px solid #e1eef4;
-  background-color: #fff;
-}
-
-.timeline-item:last-child::before {
-  display: none;
-}
-
-/* Нечетные */
-.timeline-item:nth-child(odd) {
-  padding-right: 56px;
-  text-align: right;
-}
-
-.timeline-item:nth-child(odd)::before {
-  right: -2px;
-}
-
-.timeline-item:nth-child(odd)::after {
-  right: -17px;
-}
-
-/* Четные */
-.timeline-item:nth-child(even) {
-  margin-left: auto;
-  padding-left: 56px;
-}
-
-.timeline-item:nth-child(even)::before {
-  left: -2px;
-}
-
-.timeline-item:nth-child(even)::after {
-  left: -17px;
 }/*# sourceMappingURL=main.css.map */
