--- a/sass/sections/_header-top.scss
+++ b/sass/sections/_header-top.scss
@@ -1,6 +1,6 @@
 .header-top__nav {
-    margin-top: 63px;
-    margin-bottom: 62px;
+    padding-top: 63px;
+    padding-bottom: 62px;
     display: flex;
     align-items: center;
     justify-content: space-between;
