--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -65,6 +65,11 @@ h2.grad-border  {
     background-position: center bottom 10px;
 }
 
+.timeline-item__title.grad-border {
+    background-size: 100% 6px;
+    background-position: center bottom 4px;
+}
+
 .svg-ln {
     width: 32px;
     height: 32px;
