--- a/sass/blocks/_section-title.scss
+++ b/sass/blocks/_section-title.scss
@@ -1,9 +1,9 @@
-.subtitle {
+.section-title {
     font-size: 54px;
     font-weight: 700;
 }
 
-.subtitle-42px {
+.section-title-42px {
     font-size: 42px;
     font-weight: 700;
 }
