--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@
 // Blocks
 @import "./blocks/nav";
 @import "./blocks/title";
-@import "./blocks/subtitle";
+@import "./blocks/section-title";
 @import "./blocks/header-intro";
 @import "./blocks/button";
 @import "./blocks/header-banner";
@@ -17,6 +17,7 @@
 @import "./blocks/socials";
 @import "./blocks/header-about";
 @import "./blocks/portfolio-card";
+@import "./blocks/timeline-item";
 
 // Sections
 @import "./sections/header-top";
