--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,3 +25,6 @@
 @import "./sections/portfolio";
 @import "./sections/timeline";
 @import "./sections/footer";
+
+// Media
+@import "./media/tablet";
