--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,7 @@
 @import "./sections/header";
 @import "./sections/portfolio";
 @import "./sections/timeline";
+@import "./sections/contacts";
 @import "./sections/footer";
 
 // Media
