--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -1,4 +1,32 @@
 .footer {
-	margin-top: auto; /* sticky footer */
-
+    padding-top: 40px;
+    padding-bottom: 50px;
+    background-color: #333;
 }
+
+.footer__content {
+}
+
+.footer__copyright {
+    width: 825px;
+
+    font-size: 16px;
+    line-height: 1.5; /* 24px */
+    color: #b0b0b0;
+
+    a {
+        text-decoration: underline;
+        color: #fff;
+    }
+
+    p + * {
+        margin-top: 10px;
+    }
+}
+
+.footer__date {
+    line-height: 1.4; /* 22.4px */
+    color: #FFF;
+}
+
+
