CSS link:hover correction

--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -2,9 +2,11 @@
     padding-top: 40px;
     padding-bottom: 50px;
     background-color: #333;
-}
 
-.footer__content {
+    a {
+        text-decoration: underline;
+        color: #fff;
+    }
 }
 
 .footer__copyright {
@@ -12,21 +14,17 @@
 
     font-size: 16px;
     line-height: 1.5; /* 24px */
-    color: #b0b0b0;
-
-    a {
-        text-decoration: underline;
-        color: #fff;
-    }
-
-    p + * {
-        margin-top: 10px;
-    }
 }
 
 .footer__date {
+    margin-bottom: 10px;
+
     line-height: 1.4; /* 22.4px */
-    color: #FFF;
+    color: #fff;
+}
+
+.footer__text {
+    color: #b0b0b0;
 }
 
 
