--- a/css/main.css
+++ b/css/main.css
@@ -643,24 +643,25 @@ h2.grad-border {
   padding-bottom: 50px;
   background-color: #333;
 }
+.footer a {
+  text-decoration: underline;
+  color: #fff;
+}
 
 .footer__copyright {
   width: 825px;
   font-size: 16px;
   line-height: 1.5; /* 24px */
-  color: #b0b0b0;
-}
-.footer__copyright a {
-  text-decoration: underline;
-  color: #fff;
-}
-.footer__copyright p + * {
-  margin-top: 10px;
 }
 
 .footer__date {
+  margin-bottom: 10px;
   line-height: 1.4; /* 22.4px */
-  color: #FFF;
+  color: #fff;
+}
+
+.footer__text {
+  color: #b0b0b0;
 }
 
 /* Mobile */
