--- a/css/main.css
+++ b/css/main.css
@@ -180,6 +180,10 @@ h2.grad-border {
   height: 48px;
 }
 
+.svg-inst {
+  pointer-events: none;
+}
+
 /* Utility */
 .none {
   display: none !important;
