--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -95,6 +95,10 @@ h2.grad-border  {
     height: 48px; 
 }
 
+.svg-inst {
+    pointer-events: none;
+}
+
 /* Utility */
 .none {
 	display: none !important;
