--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,6 @@
 
 /* Links */
 a, a:visited {
-  color: inherit;
   text-decoration: none;
   display: inline-block;
 }
@@ -205,6 +204,7 @@ h2.grad-border {
 .nav a {
   position: relative;
   transition: color 0.2s ease-in;
+  color: #000;
 }
 .nav a::after {
   position: absolute;
@@ -277,6 +277,9 @@ h2.grad-border {
   -moz-column-gap: 20px;
        column-gap: 20px;
 }
+.header-intro__buttons .button:first-child {
+  background-color: #fbdc4d;
+}
 .header-intro__buttons > * {
   flex-grow: 0;
 }
@@ -299,6 +302,7 @@ h2.grad-border {
   line-height: 64px;
   font-size: 20px;
   font-weight: 700;
+  color: #000;
   transition: background-color 0.2s ease-in;
 }
 .button:hover {
@@ -334,6 +338,11 @@ h2.grad-border {
 .link:hover::after {
   bottom: -3px;
   width: 100%;
+}
+
+.link-muted {
+  text-decoration: underline;
+  color: #fff;
 }
 
 .socials {
@@ -387,6 +396,7 @@ h2.grad-border {
   top: 0;
   max-width: 350px;
   height: 296px;
+  color: #000;
   transition: filter 0.2s ease-in;
 }
 .portfolio-card:hover {
@@ -465,9 +475,11 @@ h2.grad-border {
 }
 
 .timeline-item {
-  padding-bottom: 60px;
   width: 50%;
   position: relative;
+}
+.timeline-item:not(:last-child) {
+  padding-bottom: 60px;
 }
 .timeline-item::before, .timeline-item::after {
   content: "";
@@ -592,7 +604,8 @@ h2.grad-border {
 .contacts {
   padding-top: 70px;
   padding-bottom: 90px;
-  background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
+  background: linear-gradient(0deg, #f5fbff 0%, #f5fbff 100%), #f4f8f9;
+  overflow: hidden;
 }
 
 .contacts__header {
@@ -646,10 +659,6 @@ h2.grad-border {
   padding-top: 40px;
   padding-bottom: 50px;
   background-color: #333;
-}
-.footer a {
-  text-decoration: underline;
-  color: #fff;
 }
 
 .footer__copyright {
