--- a/sass/blocks/_nav.scss
+++ b/sass/blocks/_nav.scss
@@ -13,6 +13,7 @@
 .nav a {
     position: relative;
     transition: color 0.2s ease-in;
+    color: $black-color;
 
     &::after {
         position: absolute;
