--- a/sass/blocks/_portfolio-card.scss
+++ b/sass/blocks/_portfolio-card.scss
@@ -3,6 +3,7 @@
     top: 0;
     max-width: 350px;
     height: 296px;
+    color: $black-color;
     transition: filter 0.2s ease-in;
 
     &:hover {
