--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 @import "./blocks/header-intro";
 @import "./blocks/button";
 @import "./blocks/header-banner";
-@import "./blocks/link";
+@import "./blocks/links";
 @import "./blocks/socials";
 @import "./blocks/header-about";
 @import "./blocks/portfolio-card";
