--- a/sass/sections/_contacts.scss
+++ b/sass/sections/_contacts.scss
@@ -1,7 +1,8 @@
 .contacts {
     padding-top: 70px;
     padding-bottom: 90px;
-    background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
+    background: linear-gradient(0deg, #f5fbff 0%, #f5fbff 100%), #f4f8f9;
+    overflow: hidden;
 }
 
 .contacts__header {
