--- a/css/main.css
+++ b/css/main.css
@@ -111,9 +111,9 @@ body > * {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  /* Tablet - big*/
   /* Tablet */
   /* Mobile */
-  /* Mobile XS */
 }
 .container--fluid {
   max-width: unset;
@@ -121,17 +121,17 @@ body > * {
 .container--no-padding {
   padding: 0;
 }
-@media (max-width: 1199px) {
+@media (max-width: 1139px) {
   .container {
     width: 900px;
   }
 }
 @media (max-width: 899px) {
   .container {
-    width: 600px;
+    width: 768px;
   }
 }
-@media (max-width: 599px) {
+@media (max-width: 767px) {
   .container {
     width: 320px;
   }
@@ -219,6 +219,80 @@ h2.grad-border {
 .nav a:hover::after {
   width: 100%;
   bottom: -5px;
+}
+
+.logo {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+}
+
+.nav-icon {
+  width: 30px;
+  height: 25px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+@media (max-width: 899px) {
+  .nav-icon {
+    display: flex;
+  }
+}
+
+.nav-icon__middle {
+  position: relative;
+  width: 30px;
+  height: 5px;
+  background-color: rgb(0, 0, 0);
+}
+.nav-icon__middle::before, .nav-icon__middle::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 30px;
+  height: 5px;
+  transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
+  background-color: rgb(0, 0, 0);
+}
+.nav-icon__middle::before {
+  top: -10px;
+}
+.nav-icon__middle::after {
+  top: 10px;
+}
+
+/* Active state */
+.nav-icon.nav-icon--active {
+  position: fixed;
+  top: 40px;
+  right: 15px;
+}
+
+.nav-icon.nav-icon--active .nav-icon__middle {
+  background-color: transparent;
+}
+.nav-icon.nav-icon--active .nav-icon__middle::before, .nav-icon.nav-icon--active .nav-icon__middle::after {
+  top: 0;
+  transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
+  background-color: #fff;
+}
+.nav-icon.nav-icon--active .nav-icon__middle::before {
+  transform: rotate(45deg);
+}
+.nav-icon.nav-icon--active .nav-icon__middle::after {
+  transform: rotate(-45deg);
+}
+
+.nav-mobile__list {
+  display: flex;
+  row-gap: 28px;
+  flex-direction: column;
+  font-size: 18px;
+  font-weight: 600;
+  color: #000;
 }
 
 .title {
@@ -571,12 +645,9 @@ h2.grad-border {
 }
 
 .portfolio {
-  background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
-}
-
-.portfolio__content {
   padding-top: 80px;
   padding-bottom: 90px;
+  background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
 }
 
 .portfolio__title {
@@ -677,6 +748,19 @@ h2.grad-border {
   color: #b0b0b0;
 }
 
+@media (max-width: 1139px) {
+  .header-top__nav {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .nav ul {
+    -moz-column-gap: 50px;
+         column-gap: 50px;
+  }
+  .nav li {
+    font-size: 18px;
+  }
+}
 /* Mobile */
 @media (max-width: 899px) {
   /* Нечетные */
