--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -36,18 +36,18 @@ body > * {
         padding: 0;
     }
 
-    /* Tablet */
-    @media (max-width: 1199px) {
+    /* Tablet - big*/
+    @media (max-width: 1139px) {
         width: 900px;
     }
 
-    /* Mobile */
+    /* Tablet */
     @media (max-width: 899px) {
-        width: 600px;
+        width: 768px;
     }
 
-    /* Mobile XS */
-    @media (max-width: 599px) {
+    /* Mobile */
+    @media (max-width: 767px) {
         width: 320px;
     }
 }
