--- a/sass/blocks/_button.scss
+++ b/sass/blocks/_button.scss
@@ -6,7 +6,7 @@
     line-height: 64px;
     font-size: 20px;
     font-weight: 700;
-    color: $black-color;
+    color: #000;
 
     transition: background-color 0.2s ease-in;
 
