--- a/sass/blocks/_nav.scss
+++ b/sass/blocks/_nav.scss
@@ -13,7 +13,7 @@
 .nav a {
     position: relative;
     transition: color 0.2s ease-in;
-    color: $black-color;
+    color: #000;
 
     &::after {
         position: absolute;
@@ -32,3 +32,4 @@
         bottom: -5px;
     }
 }
+
