--- a/css/main.css
+++ b/css/main.css
@@ -222,6 +222,7 @@ h2.grad-border {
 }
 
 .logo {
+  display: none;
   font-size: 20px;
   font-weight: 700;
   line-height: 1;
@@ -229,22 +230,17 @@ h2.grad-border {
 }
 
 .nav-icon {
-  width: 30px;
+  width: 40px;
   height: 25px;
   display: none;
   justify-content: center;
   align-items: center;
   cursor: pointer;
 }
-@media (max-width: 899px) {
-  .nav-icon {
-    display: flex;
-  }
-}
 
 .nav-icon__middle {
   position: relative;
-  width: 30px;
+  width: 40px;
   height: 5px;
   background-color: rgb(0, 0, 0);
 }
@@ -252,7 +248,7 @@ h2.grad-border {
   content: "";
   position: absolute;
   left: 0;
-  width: 30px;
+  width: 40px;
   height: 5px;
   transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
   background-color: rgb(0, 0, 0);
@@ -266,6 +262,7 @@ h2.grad-border {
 
 /* Active state */
 .nav-icon.nav-icon--active {
+  z-index: 3;
   position: fixed;
   top: 40px;
   right: 15px;
@@ -286,12 +283,18 @@ h2.grad-border {
   transform: rotate(-45deg);
 }
 
+.nav-mobile {
+  display: none;
+}
+
 .nav-mobile__list {
   display: flex;
   row-gap: 28px;
   flex-direction: column;
   font-size: 18px;
   font-weight: 600;
+}
+.nav-mobile__list a {
   color: #000;
 }
 
@@ -763,6 +766,30 @@ h2.grad-border {
 }
 /* Mobile */
 @media (max-width: 899px) {
+  .nav, .header-top__social {
+    display: none;
+  }
+  .logo, .nav-icon {
+    display: flex;
+  }
+  .nav-mobile {
+    z-index: 2;
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    background-color: rgba(37, 73, 116, 0.8);
+  }
+  .nav-mobile__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 320px;
+    background-color: #fff;
+  }
   /* Нечетные */
   .timeline-item:nth-child(odd) {
     padding-right: 0;
