--- a/css/main.css
+++ b/css/main.css
@@ -283,10 +283,6 @@ h2.grad-border {
   transform: rotate(-45deg);
 }
 
-.nav-mobile {
-  display: none;
-}
-
 .nav-mobile__list {
   row-gap: 28px;
   flex-direction: column;
@@ -769,7 +765,7 @@ h2.grad-border {
 }
 /* Mobile */
 @media (max-width: 899px) {
-  .header-top__social {
+  .nav-mobile, .header-top__social {
     display: none;
   }
   .logo, .nav-icon {
@@ -803,7 +799,7 @@ h2.grad-border {
     background-color: rgba(37, 73, 116, 0.8);
   }
   .nav-mobile__content {
-    padding: 30px 16px 40px 15px;
+    padding: 30px 15px 40px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
