--- a/css/main.css
+++ b/css/main.css
@@ -762,6 +762,51 @@ h2.grad-border {
   .nav li {
     font-size: 18px;
   }
+  .header {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .title {
+    font-size: 58px;
+  }
+  .header-intro__title {
+    margin-bottom: 20px;
+  }
+  .header-intro__text {
+    padding-top: 8px;
+  }
+  .header-intro__desc {
+    margin-bottom: 28px;
+    max-width: 420px;
+  }
+  .header-intro__desc p {
+    font-size: 18px;
+  }
+  .header-intro__desc p + p {
+    margin-top: 10px;
+  }
+  .header-intro__img {
+    box-shadow: unset;
+  }
+  .header-intro__img img {
+    width: 376px;
+    height: 325px;
+  }
+  .button {
+    padding-left: 26px;
+    padding-right: 26px;
+    height: 58px;
+    border-radius: 50px;
+    line-height: 58px;
+    font-size: 20px;
+    font-weight: 700;
+  }
+  .header-banner {
+    margin-top: -156px;
+  }
+  .header-banner img {
+    height: 475px;
+  }
 }
 /* Mobile */
 @media (max-width: 899px) {
