--- a/sass/sections/_header-top.scss
+++ b/sass/sections/_header-top.scss
@@ -1,6 +1,9 @@
-.header-top__nav {
+.header-top {
     padding-top: 63px;
     padding-bottom: 62px;
+}
+
+.header-top__nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
