--- a/sass/media/_tablet-big.scss
+++ b/sass/media/_tablet-big.scss
@@ -1,7 +1,11 @@
 @media (max-width: 1139px) {
-    .header-top__nav {
-        padding-top: 30px;
-        padding-bottom: 30px;
+    .svg-git {
+        width: 36px;
+        height: 36px;
+    }
+
+    .header-top {
+        padding-bottom: 60px;
     }
 
     .nav ul {
@@ -13,8 +17,8 @@
     }
 
     .header {
-        padding-top: 0;
-        padding-bottom: 0;
+       padding-top: 0;
+       padding-bottom: 0;
     }
 
     .title {
@@ -27,11 +31,11 @@
 
     .header-intro__text {
         padding-top: 8px;
+        max-width: 420px;
     }
     
     .header-intro__desc {
         margin-bottom: 28px;
-        max-width: 420px;
 
         p {
             font-size: 18px;
