CSS .header-about @media tablet-small

--- a/css/main.css
+++ b/css/main.css
@@ -320,7 +320,7 @@ h2.grad-border {
 
 .header-intro__content {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -772,14 +772,18 @@ h2.grad-border {
     padding-top: 0;
     padding-bottom: 0;
   }
-  .title {
-    font-size: 58px;
-  }
   .header-intro__title {
     margin-bottom: 20px;
   }
+  .title {
+    font-size: 58px;
+  }
+  .title.grad-border {
+    background-position: center bottom 10px;
+    background-size: 100% 10px;
+  }
   .header-intro__text {
-    padding-top: 8px;
+    padding-top: 5px;
     max-width: 420px;
   }
   .header-intro__desc {
@@ -791,13 +795,6 @@ h2.grad-border {
   .header-intro__desc p + p {
     margin-top: 10px;
   }
-  .header-intro__img {
-    box-shadow: unset;
-  }
-  .header-intro__img img {
-    width: 376px;
-    height: 325px;
-  }
   .button {
     padding-left: 26px;
     padding-right: 26px;
@@ -807,8 +804,15 @@ h2.grad-border {
     font-size: 20px;
     font-weight: 700;
   }
+  .header-intro__img {
+    box-shadow: unset;
+  }
+  .header-intro__img img {
+    width: 376px;
+    height: 325px;
+  }
   .header-banner {
-    margin-top: -156px;
+    margin-top: -85px;
   }
   .header-banner img {
     height: 475px;
@@ -867,6 +871,35 @@ h2.grad-border {
          column-gap: 0;
     row-gap: 28px;
     align-items: flex-start;
+  }
+  .header-intro__title {
+    margin-bottom: 10px;
+  }
+  .title {
+    font-size: 42px;
+  }
+  .header-intro__text {
+    padding-top: 0;
+    max-width: 354px;
+  }
+  .header-intro__desc {
+    margin-bottom: 0;
+  }
+  .header-intro__desc p {
+    font-size: 16px;
+  }
+  .header-intro__desc p + p {
+    margin-top: 5px;
+  }
+  .button {
+    display: none;
+  }
+  .header-intro__img img {
+    width: 290px;
+    height: 250px;
+  }
+  .header-banner {
+    height: 430px;
   }
   /* Нечетные */
   .timeline-item:nth-child(odd) {
