--- a/sass/blocks/_header-intro.scss
+++ b/sass/blocks/_header-intro.scss
@@ -5,7 +5,7 @@
 
 .header-intro__content {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
 }
 
