--- a/sass/media/_tablet.scss
+++ b/sass/media/_tablet.scss
@@ -63,6 +63,44 @@
         align-items: flex-start;
     }
 
+    .header-intro__title {
+        margin-bottom: 10px;
+    }
+
+    .title {
+        font-size: 42px;
+    }
+
+    .header-intro__text {
+        padding-top: 0;
+        max-width: 354px;
+    }
+
+    .header-intro__desc {
+        margin-bottom: 0;
+
+        p {
+            font-size: 16px;
+        }
+
+        p + p {
+            margin-top: 5px;
+        }
+    }
+
+    .button {
+        display: none;
+    }
+
+    .header-intro__img img {
+        width: 290px;
+        height: 250px;
+    }
+
+    .header-banner {
+        height: 430px;
+    }
+
     /* Нечетные */
     .timeline-item:nth-child(odd) {
         padding-right: 0;
